Add env and dotnet

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Poushita Guha",
   "license": "ISC",
   "dependencies": {
+    "dotnet": "^1.1.4",
     "express": "^4.17.1",
     "request": "^2.88.2"
   }
