--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Backend folder",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \"node backend/index.js\" \"cd frontend && npm start\""
   },
   "author": "Poushita Guha",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "dotnet": "^1.1.4",
     "express": "^4.17.1",
     "request": "^2.88.2"
